--- a/style.css
+++ b/style.css
@@ -457,3 +457,16 @@ footer {
     text-align: center;
   }
 }
+
+/* Animation for hidden elements */
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+.show {
+ opacity: 1;
+ filter: blur(0); 
+ transform: translateX(0);
+}
